# AXIOM-RESEARCH-ENGINE

./: .gitignore  AXIOM-Architecture-v1.0-Design-Blueprint.docx  CHANGELOG.md  README-FIRST.md  README.md  RELEASE-VERIFICATION.md  UPGRADE-v0.3.0.md  apply_patch.sh  pyproject.toml
.axiom-backup-v0.4.0-20260721150403/: README.md  entities.json  pyproject.toml
AXIOM-RESEARCH-ENGINE-v0.5.0-verified/: CHANGELOG.md  MIGRATION-v0.3-to-v0.4.md  README.md  pyproject.toml
AXIOM-RESEARCH-ENGINE-v0.6.0-verified/: CHANGELOG.md  MIGRATION-v0.4.0.md  MIGRATION-v0.5-to-v0.6.md  README.md  RELEASE-VERIFICATION.md  pyproject.toml
AXIOM-RESEARCH-ENGINE-v0.7.0-verified/: .gitignore  CHANGELOG.md  MIGRATION-v0.6-to-v0.7.md  README.md
docs/: architecture.md  er-diagram.md  impact-engine.md
examples/: canonical_valuation_requirements.json  estimate_data_source.example.json  financial_data_source.example.json  market_data_source.example.json  real_100_estimates.example.json  sec_company_tickers_exchange.example.json  valuation_assumptions.example.json
frontend/: axiom-valuation-card.css  axiom-valuation-card.js  axiom-valuation-client.js  axiom-valuation-dashboard.css  axiom-valuation-dashboard.js
schemas/: README.md  company_universe_source.schema.json  sec-companyfacts.schema.json  universe-company.schema.json  universe-import.schema.json  valuation-profile-catalog.schema.json
scripts/: build_financial_statement.py  build_us_universe_source.py  download_companyfacts.py  import_company_universe.py  migrate_official_universe.py  run_local_valuation.py  run_valuation_api.py  (+1 more)
(+354 files in other folders)
