
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-research-engine"
version = "0.7.0"
description = "Evidence-based investment knowledge graph and research graph, ETF exposure, valuation, and causal impact propagation foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "gunicorn>=22,<24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
axiom = "axiom_engine.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
